force-app/main/default/objects/Parcel__c/Parcel__c.object-meta.xml
<CustomObject>
    <label>Parcel</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Parcel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>