force-app/main/default/objects/Parcel__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PARCEL</relationshipLabel>
    <relationshipName>PARCEL</relationshipName>
    <type>Lookup</type>
</CustomField>