force-app/main/default/objects/Parcel__c/fields/CustomerMobile__c.field-meta.xml
<CustomField>
    <fullName>CustomerMobile__c</fullName>
    <label>Customer Mobile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>