force-app/main/default/objects/Parcel__c/fields/CustomerNamwText__c.field-meta.xml
<CustomField>
    <fullName>CustomerNamwText__c</fullName>
    <label>Customer Name-text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>