force-app/main/default/objects/Parcel__c/fields/CustomersEmailOld__c.field-meta.xml
<CustomField>
    <fullName>CustomersEmailOld__c</fullName>
    <label>Customer&apos;s Email (Old)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>