force-app/main/default/objects/Parcel__c/fields/LabelURL__c.field-meta.xml
<CustomField>
    <fullName>LabelURL__c</fullName>
    <label>Label URL</label>
    <type>Url</type>
</CustomField>