force-app/main/default/objects/Parcel__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>