force-app/main/default/objects/Parcel__c/fields/NetWeightKG__c.field-meta.xml
<CustomField>
    <fullName>NetWeightKG__c</fullName>
    <label>Net Weight(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>