force-app/main/default/objects/Parcel__c/fields/OriginWarehouse__c.field-meta.xml
<CustomField>
    <fullName>OriginWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Warehouse</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>PARCEL</relationshipLabel>
    <relationshipName>PARCEL</relationshipName>
    <type>Lookup</type>
</CustomField>