force-app/main/default/objects/Parcel__c/fields/ParcelDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>ParcelDeliveryStatus__c</fullName>
    <label>Parcel Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeliveryStatus</valueSetName>
    </valueSet>
</CustomField>