force-app/main/default/objects/Parcel__c/fields/RecipientAddress__c.field-meta.xml
<CustomField>
    <fullName>RecipientAddress__c</fullName>
    <label>Recipient Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>