force-app/main/default/objects/Parcel__c/fields/RecipientCountry__c.field-meta.xml
<CustomField>
    <fullName>RecipientCountry__c</fullName>
    <label>Recipient Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryList</valueSetName>
    </valueSet>
</CustomField>