force-app/main/default/objects/Parcel__c/fields/RecipientFullName__c.field-meta.xml
<CustomField>
    <fullName>RecipientFullName__c</fullName>
    <label>Recipient Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>