force-app/main/default/objects/Parcel__c/fields/RecipientMobile__c.field-meta.xml
<CustomField>
    <fullName>RecipientMobile__c</fullName>
    <label>Recipient Mobile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>