force-app/main/default/objects/Parcel__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods S/O</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipLabel>PARCEL</relationshipLabel>
    <relationshipName>Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>