force-app/main/default/objects/Parcel__c/fields/SenderCountry__c.field-meta.xml
<CustomField>
    <fullName>SenderCountry__c</fullName>
    <label>Sender Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryList</valueSetName>
    </valueSet>
</CustomField>