force-app/main/default/objects/Parcel__c/fields/SenderDistrictCity__c.field-meta.xml
<CustomField>
    <fullName>SenderDistrictCity__c</fullName>
    <label>Sender District/City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SenderCityProvince__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DistrictCity</valueSetName>
    </valueSet>
</CustomField>