force-app/main/default/objects/Parcel__c/fields/SenderMobile__c.field-meta.xml
<CustomField>
    <fullName>SenderMobile__c</fullName>
    <label>Sender Mobile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>