force-app/main/default/objects/Parcel__c/fields/ShippingLabel1stPage__c.field-meta.xml
<CustomField>
    <fullName>ShippingLabel1stPage__c</fullName>
    <label>Shipping Label 1st Page</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>