force-app/main/default/objects/Parcel__c/fields/WLHUnit__c.field-meta.xml
<CustomField>
    <fullName>WLHUnit__c</fullName>
    <label>W/L/H Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WLDUnit</valueSetName>
    </valueSet>
</CustomField>