force-app/main/default/objects/Parcel__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipLabel>PARCEL</relationshipLabel>
    <relationshipName>Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>