force-app/main/default/objects/Parcel__c/recordTypes/Delivery.recordType-meta.xml
<RecordType>
    <fullName>Delivery</fullName>
    <active>true</active>
    <description>Service supplied by our company</description>
    <label>Delivery</label>
</RecordType>