force-app/main/default/objects/Parcel__c/recordTypes/Express.recordType-meta.xml
<RecordType>
    <fullName>Express</fullName>
    <active>true</active>
    <description>Service supplied by 3rd party</description>
    <label>Express</label>
</RecordType>